--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
         <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
     </dependency>
+    <dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
 		
 	</dependencies>
 
