--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency> 
+    <groupId>org.springframework</groupId> 
+    <artifactId>spring-webmvc</artifactId> 
+    <version>${spring.version}</version> 
+</dependency>
 		<dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-jasper</artifactId>
