--- a/pom.xml
+++ b/pom.xml
@@ -35,24 +35,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		 <dependency>
+		<!-- <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency> -->
+		
+<!-- 		  <dependency>
     
     <groupId>org.springframework</groupId> 
     <artifactId>spring-webmvc</artifactId> 
-    <version>5.0.0.RELEASE</version>
+    <version>3.0.6.RELEASE</version>
 
-</dependency>
+</dependency> -->
 <!-- dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-test</artifactId>
     <version>4.2.5.RELEASE</version>
     <scope>test</scope>
 </dependency> -->
-		<dependency>
+
+		 <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-jasper</artifactId>
         <scope>provided</scope>
     </dependency>
+   
     <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
